--- a/src/Mod/Sandbox/Gui/Makefile.am
+++ b/src/Mod/Sandbox/Gui/Makefile.am
@@ -13,7 +13,7 @@ libSandboxGui_la_LDFLAGS = -L../../../Base -L../../../App -L../../../Gui -L../..
 		$(sim_ac_coin_ldflags) $(sim_ac_coin_libs) $(sim_ac_soqt_ldflags) $(sim_ac_soqt_libs) \
 		$(QT_LIBS) $(all_libraries) -version-info @LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@
 
-libSandboxGui_la_CPPFLAGS = -DSandboxAppExport= -DSandboxGuiExport=
+libSandboxGui_la_CPPFLAGS = $(sim_ac_coin_cppflags) -DSandboxAppExport= -DSandboxGuiExport=
 
 libSandboxGui_la_LIBADD   = \
 		@BOOST_SYSTEM_LIB@ \
