Added 0000602 : Annotations object for Drawing pages

--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -27,6 +27,8 @@ SET(Features_SRCS
     FeatureView.h
     FeatureViewPart.cpp
     FeatureViewPart.h
+    FeatureViewAnnotation.cpp
+    FeatureViewAnnotation.h
     PageGroup.cpp
     PageGroup.h
 )
