--- a/src/Mod/Drawing/App/Makefile.am
+++ b/src/Mod/Drawing/App/Makefile.am
@@ -13,6 +13,8 @@ libDrawing_la_SOURCES=\
 		FeatureView.h \
 		FeatureViewPart.cpp \
 		FeatureViewPart.h \
+		FeatureViewAnnotation.cpp \
+		FeatureViewAnnotation.h \
 		PageGroup.cpp \
 		PageGroup.h \
 		ProjectionAlgos.cpp \
