Added annotations to ship weights definition tool

--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -101,6 +101,7 @@ SOURCE_GROUP("shiputils" FILES ${ShipUtils_SRCS})
 
 SET(ShipWeights_SRCS
 	tankWeights/__init__.py
+	tankWeights/Preview.py
 	tankWeights/TaskPanel.py
 	tankWeights/TaskPanel.ui
 )
