Added 0000145 : Drawing clip objects

--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -29,6 +29,8 @@ SET(Features_SRCS
     FeatureViewPart.h
     FeatureViewAnnotation.cpp
     FeatureViewAnnotation.h
+    FeatureClip.cpp
+    FeatureClip.h
     PageGroup.cpp
     PageGroup.h
 )
