--- a/src/Mod/Drawing/Gui/Resources/Makefile.am
+++ b/src/Mod/Drawing/Gui/Resources/Makefile.am
@@ -21,6 +21,7 @@ EXTRA_DIST = \
 		icons/actions/drawing-orthoviews.svg \
 		icons/actions/drawing-openbrowser.svg \
 		icons/actions/drawing-annotation.svg \
+		icons/actions/drawing-clip.svg \
 		icons/Page.svg \
 		icons/Pages.svg \
 		icons/View.svg \
