--- a/src/Mod/Drawing/App/Makefile.am
+++ b/src/Mod/Drawing/App/Makefile.am
@@ -15,6 +15,8 @@ libDrawing_la_SOURCES=\
 		FeatureViewPart.h \
 		FeatureViewAnnotation.cpp \
 		FeatureViewAnnotation.h \
+		FeatureClip.cpp \
+		FeatureClip.h \
 		PageGroup.cpp \
 		PageGroup.h \
 		ProjectionAlgos.cpp \
