Added 0000387 : Arch roof tool

--- a/src/Mod/Arch/Makefile.am
+++ b/src/Mod/Arch/Makefile.am
@@ -27,7 +27,8 @@ data_DATA = \
 		ArchWindow.py \
 		ArchCommands.py \
 		ArchAxis.py \
-		ArchVRM.py
+		ArchVRM.py \
+		ArchRoof.py
 
 CLEANFILES = $(BUILT_SOURCES)
 
