--- a/src/Base/CMakeLists.txt
+++ b/src/Base/CMakeLists.txt
@@ -68,7 +68,7 @@ if(SWIG_FOUND)
     add_definitions(-DHAVE_SWIG=1)
 endif(SWIG_FOUND)
 
-if (EXISTS ${CMAKE_SOURCE_DIR}/src/zipios++ AND NOT FREECAD_BUILD_DEBIAN)
+if (EXISTS ${CMAKE_SOURCE_DIR}/src/zipios++ AND NOT FREECAD_USE_EXTERNAL_ZIPIOS)
 SET(zipios_SRCS
     ../zipios++/backbuffer.h
     ../zipios++/basicentry.cpp
@@ -122,12 +122,7 @@ SET(zipios_SRCS
     ../zipios++/zipoutputstream.h
 )
 SOURCE_GROUP("zipios" FILES ${zipios_SRCS})
-else (EXISTS ${CMAKE_SOURCE_DIR}/src/zipios++ AND NOT FREECAD_BUILD_DEBIAN)
-    set(FreeCADBase_LIBS
-        ${FreeCADBase_LIBS}
-        -lzipios
-    )
-endif (EXISTS ${CMAKE_SOURCE_DIR}/src/zipios++ AND NOT FREECAD_BUILD_DEBIAN)
+endif ()
 
 SET(pycxx_SRCS
     ../CXX/Config.hxx
@@ -293,7 +288,7 @@ SET(FreeCADBase_SRCS
 )
 
 # Use external zipios++ if specified.
-if(USE_EXTERNAL_ZIPIOS)
+if(FREECAD_USE_EXTERNAL_ZIPIOS)
     find_library(ZIPIOS_LIBRARY zipios)
     find_path(ZIPIOS_INCLUDES zipios++/zipios-config.h)
     if(ZIPIOS_LIBRARY)
@@ -308,9 +303,9 @@ if(USE_EXTERNAL_ZIPIOS)
     else()
         message(FATAL_ERROR "Using external zipios++ was specified but was not found.")
     endif()
-else(USE_EXTERNAL_ZIPIOS)
+else(FREECAD_USE_EXTERNAL_ZIPIOS)
     list(APPEND FreeCADBase_SRCS ${zipios_SRCS})
-endif(USE_EXTERNAL_ZIPIOS)
+endif(FREECAD_USE_EXTERNAL_ZIPIOS)
 
 
 if(MSVC)
