Tmp. switch off gcc linker settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
     # get linker errors as soon as possible and not at runtime e.g. for modules
     if(UNIX)
-        SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
+    #    SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
     endif(UNIX)
 endif(CMAKE_COMPILER_IS_GNUCXX)
 
