Groove feature (code is 99% identical to Revolution feature)

--- a/src/Mod/PartDesign/App/CMakeLists.txt
+++ b/src/Mod/PartDesign/App/CMakeLists.txt
@@ -50,6 +50,8 @@ SET(FeaturesSketchBased_SRCS
     FeaturePocket.h
     FeatureRevolution.cpp
     FeatureRevolution.h
+    FeatureGroove.cpp
+    FeatureGroove.h
     FeatureAdditive.cpp
     FeatureAdditive.h
     FeatureSubtractive.h
