--- a/src/Mod/PartDesign/Gui/Resources/Makefile.am
+++ b/src/Mod/PartDesign/Gui/Resources/Makefile.am
@@ -37,6 +37,7 @@ EXTRA_DIST = \
 		translations/PartDesign_uk.ts \
 		translations/PartDesign_zh.qm \
 		translations/PartDesign_zh.ts \
+		icons/PartDesign_Groove.svg \
 		icons/PartDesign_Pad.svg \
 		icons/PartDesign_Pocket.svg \
 		icons/PartDesign_Revolution.svg \
