Fix build errors with autotools, fix a couple of grave bugs

--- a/src/Mod/PartDesign/App/Makefile.am
+++ b/src/Mod/PartDesign/App/Makefile.am
@@ -17,6 +17,8 @@ libPartDesign_la_SOURCES=\
 		FeatureChamfer.h \
 		FeatureDressUp.cpp \
 		FeatureDressUp.h \
+		FeatureGroove.cpp \
+		FeatureGroove.h \
 		Body.cpp \
 		Body.h \
 		FeatureSketchBased.cpp \
