--- a/src/Mod/Part/Gui/Makefile.am
+++ b/src/Mod/Part/Gui/Makefile.am
@@ -19,6 +19,7 @@ BUILT_SOURCES=\
 		ui_TaskFaceColors.h \
 		ui_TaskShapeBuilder.h \
 		ui_TaskLoft.h \
+		ui_TaskSweep.h \
 		moc_CrossSections.cpp \
 		moc_DlgBooleanOperation.cpp \
 		moc_DlgExtrusion.cpp \
@@ -35,6 +36,7 @@ BUILT_SOURCES=\
 		moc_TaskFaceColors.cpp \
 		moc_TaskShapeBuilder.cpp \
 		moc_TaskLoft.cpp \
+		moc_TaskSweep.cpp \
 		qrc_Part.cpp 
 
 libPartGui_la_SOURCES=\
@@ -73,6 +75,8 @@ libPartGui_la_SOURCES=\
 		TaskShapeBuilder.h \
 		TaskLoft.cpp \
 		TaskLoft.h \
+		TaskSweep.cpp \
+		TaskSweep.h \
 		PreCompiled.cpp \
 		PreCompiled.h \
 		SoBrepShape.cpp \
@@ -230,6 +234,7 @@ EXTRA_DIST = \
 		TaskFaceColors.ui \
 		TaskShapeBuilder.ui \
 		TaskLoft.ui \
+		TaskSweep.ui \
 		Resources/Part.qrc \
 		Resources/translations/Part_af.qm \
 		Resources/translations/Part_af.ts \
