--- a/src/Gui/Icons/Makefile.am
+++ b/src/Gui/Icons/Makefile.am
@@ -56,6 +56,7 @@ EXTRA_DIST = \
 		edit-copy.svg \
 		edit-cut.svg \
 		edit-delete.svg \
+		edit-edit.svg \
 		edit-paste.svg \
 		edit-select-all.svg \
 		edit-select-box.svg \
