Fix build errors with autotools

--- a/src/Mod/Drawing/Gui/Makefile.am
+++ b/src/Mod/Drawing/Gui/Makefile.am
@@ -91,6 +91,6 @@ libdir = $(prefix)/Mod/Drawing
 CLEANFILES = $(BUILT_SOURCES)
 
 EXTRA_DIST = \
-		$(ibDrawingGui_la_UI)
+		$(libDrawingGui_la_UI) \
 		CMakeLists.txt
 
