--- a/src/Mod/Robot/App/CMakeLists.txt
+++ b/src/Mod/Robot/App/CMakeLists.txt
@@ -108,7 +108,7 @@ SET(Robot_Scripts
     RobotExampleTrajectoryOutOfShapes.py
 )
 
-if (EXISTS Lib/Kuka)
+if (EXISTS ${CMAKE_SOURCE_DIR}/src/Mod/Robot/Lib/Kuka)
 SET(Robot_Resources
     Lib/Kuka/kr500_1.wrl
     Lib/Kuka/kr500_1.csv
@@ -123,7 +123,7 @@ SET(Robot_Resources
     Lib/Kuka/kr_125.csv
     Lib/Kuka/kr125_2.pdf
 )
-endif (EXISTS Lib/Kuka)
+endif ()
 
 add_library(Robot SHARED ${Robot_SRCS})
 target_link_libraries(Robot ${Robot_LIBS})
