--- a/src/Mod/Ship/Makefile.am
+++ b/src/Mod/Ship/Makefile.am
@@ -5,6 +5,7 @@ data_DATA = \
 	InitGui.py \
 	ShipGui.py \
 	Instance.py \
+	SimInstance.py \
 	TankInstance.py
 
 nobase_data_DATA = \
@@ -37,6 +38,11 @@ nobase_data_DATA = \
 	Icons/Weight.png \
 	Icons/Weight.xcf \
 	Icons/Weight.xpm \
+	Icons/SimIco.xcf \
+	Icons/Sim.xpm \
+	Icons/SimCreateIco.png \
+	Icons/SimCreateIco.xcf \
+	Icons/SimCreateIco.xpm \
 	Icons/Tank.png \
 	Icons/Tank.xcf \
 	Icons/Tank.xpm \
@@ -81,6 +87,9 @@ nobase_data_DATA = \
 	tankGZ/Plot.py \
 	tankGZ/TaskPanel.py \
 	tankGZ/TaskPanel.ui
+	simCreate/__init__.py \
+	simCreate/TaskPanel.py \
+	simCreate/TaskPanel.ui
 
 CLEANFILES = $(BUILT_SOURCES)
 
