Simulation thread control developed.

--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -43,6 +43,8 @@ SET(ShipIcons_SRCS
 	Icons/SimCreateIco.xpm
 	Icons/SimRunIco.png
 	Icons/SimRunIco.xpm
+	Icons/SimStopIco.png
+	Icons/SimStopIco.xpm
 	Icons/Tank.png
 	Icons/Tank.xcf
 	Icons/Tank.xpm
