--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -145,9 +145,11 @@ SET(SimRun_SRCS
 	simRun/Simulation.py
 	simRun/TaskPanel.py
 	simRun/TaskPanel.ui
+	simRun/clSim/__init__.py
+	simRun/clSim/initialization.py
+	simRun/clSim/Utils.py
 	simRun/Sim/__init__.py
 	simRun/Sim/initialization.py
-	simRun/Sim/Utils.py
 )
 SOURCE_GROUP("simrun" FILES ${SimRun_SRCS})
 
