Linear system matrix generation developed (only fluid involved for the moment)

--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -150,6 +150,7 @@ SET(SimRun_SRCS
 	simRun/clSim/Utils.py
 	simRun/Sim/__init__.py
 	simRun/Sim/initialization.py
+	simRun/Sim/matrixGen.py
 )
 SOURCE_GROUP("simrun" FILES ${SimRun_SRCS})
 
